Changelog
=========

1.10.7 (unreleased)
-------------------

- Nothing changed yet.


1.10.6 (2018-11-30)
-------------------

- Additional logging in resize2fs (#107265).


1.10.5 (2018-10-22)
-------------------

- Adapt VM base image loading code to Ceph Jewel.

- Fix VM base image loading for Hydra static channel compatibility.


1.10.4 (2018-10-19)
-------------------

- Additional safeguards for filesystem resize (#106759).


1.10.3 (2018-10-10)
-------------------

- Fix bug in filesystem resize code (#105199).


1.10.2 (2018-09-27)
-------------------

- Ignore errors while purging old backup directories (#106478).


1.10.1 (2018-04-10)
-------------------

- Allow local include files for DHCP configuration, e.g.,
  `/etc/dhcp/local/dhcpd6.srv.in` (#100669).


1.10.0 (2018-04-04)
-------------------

- VM image charging: use LZ4 compressed images.


1.9.13 (2017-08-01)
-------------------

- Update hostmaster address (#16370).
- Stabilize DNS record sort order (#16370).


1.9.12 (2017-06-12)
-------------------

- Also configure output RG firewall rules to relieve conntrack table overload.


1.9.11 (2017-05-24)
-------------------

- Make vmimage download code more robust if encountering a 404. Hydra doesn't
  necessarily always provide an image and we're fine with that. We just keep
  using an older version that is still good (#26700).


1.9.10 (2017-03-09)
-------------------

- Fix VM Ceph image deletion. This was forgotten to be updated when we moved
  from RG-specific pools to pools that reflect the underlying storage
  technology. The new code hunts down all images of a VM, potentially in all
  pools.


1.9.9 (2016-12-21)
------------------

- Improve resource usage of VM config scrubbing: we did not limit the number
  of subprocess of "fc-qemu ensure" that we were spawning.

  We only limited the rate of spawns per second. At some points we saw VM
  servers to get overloaded by a) using multiprocessing.Process that creates