@@ -20,20 +20,20 @@ setup(
     license='BSD',
     namespace_packages=['gocept'],
     install_requires=[
-        'configobj>=4.7',
-        'ipaddress>=1.0',
+        'configobj==4.7.2',
+        'ipaddress==1.0.14',
         'iso8601==0.1.10',
-        'lz4>=1.0',
-        'nagiosplugin',
-        'netaddr>=0.7',
-        'pytest',
-        'python-ldap',
-        'pytz',
-        'PyYaml',
-        'requests>=2.3',
+        'lz4==1.1.0',
+        'nagiosplugin==1.2.4',
+        'netaddr==0.7.10',
+        'pytest==3.0.3',
+        'python-ldap==2.4.19',
+        'pytz==2017.2',
+        'PyYaml==3.10',
+        'requests==2.11.1',
         'setuptools',
-        'six',
-        'shortuuid>=0.4',
+        'six==1.10.0',
+        'shortuuid==0.4.2',
     ],
     entry_points={
         'console_scripts': [
